[package]
name = "injecteddll"
version = "0.1.0"
authors = ["Alejandro Lobo <alobop@outlook.com>, Asher Davila"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "..\\bindings" }
winsafe = {path = "..\\winsafe"}
