[package]
name = "bindings_dll"
version = "0.1.0"
authors = ["Alejandro Lobo <alobop@outlook.com>, Asher Davila"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.11.0"

[build-dependencies]
windows = "0.11.0"
